# shades

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yaml
docs/: edsl-proc-macro.md  edsl_proc_macro.md
examples/: simple.rs
shades/: Cargo.toml
shades-edsl/: Cargo.toml
shades-edsl/src/: lib.rs  syntax.rs
shades-edsl/tests/: shades.rs
shades/examples/: simple.rs
shades/src/: builtin.rs  env.rs  erased.rs  expr.rs  fun.rs  input.rs  lib.rs  output.rs  scope.rs  stage.rs  stdlib.rs  swizzle.rs  types.rs  var.rs
shades/src/writer/: glsl.rs
shades/tests/: shades.rs
src/: env.rs  expr.rs  fun.rs  input.rs  lib.rs  output.rs  scope.rs  shader.rs  stage.rs  stdlib.rs  swizzle.rs  types.rs  var.rs  writer.rs
src/writer/: glsl.rs
