[package]
name = "shades-edsl"
version = "0.1.0"
license = "BSD-3-Clause"
authors = ["Dimitri Sabadie <dimitri.sabadie@gmail.com>"]
description = "An EDSL for shading languages"
keywords = ["edsl", "shader", "glsl", "spir-v"]
categories = ["graphics"]
homepage = "https://github.com/phaazon/shades"
repository = "https://github.com/phaazon/shades"
documentation = "https://docs.rs/shades"
readme = "../README.md"
edition = "2018"

[badges]
maintenance = { status = "actively-developed" }

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "1", features = ["extra-traits", "full", "visit-mut"] }

[dev-dependencies]
shades = { version = "0.4", path = "../shades" }
